--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+CG-TeamProject/.vs
 CG-TeamProject/.vs/CG-TeamProject/v17/fileList.bin
 CG-TeamProject/.vs/CG-TeamProject/FileContentIndex/4564c926-b61a-4e61-9ea7-58e0521b14c8.vsidx
 CG-TeamProject/.vs/CG-TeamProject/FileContentIndex/91642129-ad5d-4d13-9055-17646995f868.vsidx
@@ -7,3 +7,4 @@ CG-TeamProject/.vs/CG-TeamProject/FileContentIndex/d5e1ff88-067e-4154-af88-b0a61
 CG-TeamProject/.vs/CG-TeamProject/v17/.suo
 CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
 CG-TeamProject/.vs/CG-TeamProject/v17/.suo
+CG-TeamProject/.vs/CG-TeamProject/FileContentIndex/546076bb-35ee-4bbb-a8b9-f9e088100693.vsidx
