캐릭터1하는중

--- a/CG-TeamProject/CG-TeamProject/CG-TeamProject.vcxproj
+++ b/CG-TeamProject/CG-TeamProject/CG-TeamProject.vcxproj
@@ -131,9 +131,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="소스.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="character2.h" />
     <ClInclude Include="헤더.h" />
   </ItemGroup>
   <ItemGroup>
