--- a/CG-TeamProject/CG-TeamProject/CG-TeamProject.vcxproj.filters
+++ b/CG-TeamProject/CG-TeamProject/CG-TeamProject.vcxproj.filters
@@ -18,12 +18,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="소스.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="헤더.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="character2.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
