--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ CG-TeamProject/.vs/CG-TeamProject/v17/.suo
 CG-TeamProject/.vs/CG-TeamProject/FileContentIndex/546076bb-35ee-4bbb-a8b9-f9e088100693.vsidx
 CG-TeamProject/.vs/CG-TeamProject/v17/.suo
 CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
+CG-TeamProject/.vs/CG-TeamProject/v17/.suo
+CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
