--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ CG-TeamProject/.vs/CG-TeamProject/v17/.suo
 CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
 CG-TeamProject/.vs/CG-TeamProject/v17/.suo
 CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
+CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
