봉 움직이기 추가

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,20 @@ CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
 CG-TeamProject/.vs/CG-TeamProject/v17/.suo
 CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
 CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
+CG-TeamProject/.vs/CG-TeamProject/v17/.suo
+CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.exe.recipe
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.ilk
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.log
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.tlog/CG-TeamProject.lastbuildstate
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.tlog/Cl.items.tlog
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.tlog/CL.read.1.tlog
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.tlog/CL.write.1.tlog
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.tlog/link.read.1.tlog
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.tlog/link.secondary.1.tlog
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.tlog/link.write.1.tlog
+CG-TeamProject/CG-TeamProject/x64/Debug/main.obj
+CG-TeamProject/CG-TeamProject/x64/Debug/vc143.idb
+CG-TeamProject/CG-TeamProject/x64/Debug/vc143.pdb
+CG-TeamProject/x64/Debug/CG-TeamProject.exe
+CG-TeamProject/x64/Debug/CG-TeamProject.pdb
