--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ CG-TeamProject/x64/Debug/CG-TeamProject.exe
 CG-TeamProject/x64/Debug/CG-TeamProject.pdb
 CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
 CG-TeamProject/x64/Debug/CG-TeamProject.pdb
+CG-TeamProject/.vs/CG-TeamProject/v17/.suo
+CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
+CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.log
