--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ CG-TeamProject/x64/Debug/CG-TeamProject.pdb
 CG-TeamProject/.vs/CG-TeamProject/v17/.suo
 CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
 CG-TeamProject/CG-TeamProject/x64/Debug/CG-TeamProject.log
+CG-TeamProject/.vs/CG-TeamProject/v17/.suo
+CG-TeamProject/.vs/CG-TeamProject/v17/DocumentLayout.json
